docs: adding api docs for /items/:id endpoint
